# unknown-core

./: .brave_gclient  BUILD.gn  DEPS  PRESUBMIT.py  brave_paks.gni  brave_repack_locales.gni  jest.config.js  package.json  tsconfig.json
.storybook/: BUILD.gn
android/: BUILD.gn  android_browser_tests.gni  brave_java_sources.gni  brave_xml_preprocessor.gni  xml_processor.pydeps
android/browsertests_apk/: AndroidManifest.xml.jinja2
android/feed/: brave_feed_java_sources.gni
android/javatests/: BUILD.gn
android/junit/: BUILD.gn
base/: brave_base_shared_preferences_java.gni  sources.gni
base/apple/: base_value_bridge+private.h  base_value_bridge.mm  foundation_util.h
base/process/: process_launcher_posix.cc  process_launcher_win.cc
base/test/: test_vendor_is_brave.cc
browser/: BUILD.gn  DEPS  about_flags.cc  brave_app_controller_mac.mm  brave_app_controller_mac_browsertest.mm  brave_autofill_browsertest.cc  brave_browser_features.cc  brave_browser_features.h  brave_browser_main_extra_parts.cc  brave_browser_main_extra_parts_p3a.cc  brave_browser_main_parts.cc  brave_browser_main_parts_mac.h  brave_browser_main_parts_mac.mm  brave_browser_process.cc  brave_browser_process.h  brave_browser_process_impl.cc  brave_browser_process_impl.h  brave_content_browser_client.cc  brave_content_browser_client_browsertest.cc  brave_content_browser_client_unittest.cc  brave_drm_tab_helper.cc  brave_drm_tab_helper.h  brave_local_state_prefs.cc  brave_prefs_browsertest.cc  brave_profile_prefs.cc  brave_resources_browsertest.cc  brave_resources_util_unittest.cc  brave_scheme_load_browsertest.cc  brave_shell_integration.cc  brave_shell_integration_mac.mm  brave_shell_integration_win.cc  brave_tab_helpers.cc  browser_context_keyed_service_factories.cc  default_protocol_handler_utils_win.cc  default_protocol_handler_utils_win_unittest.cc  sources.gni  update_util.cc
browser/ai_chat/: BUILD.gn  DEPS  ai_chat_agent_profile_browsertest.cc  ai_chat_agent_profile_helper.cc  ai_chat_agent_profile_helper.h  ai_chat_agent_profile_manager.cc  ai_chat_agent_profile_manager.h  ai_chat_brave_search_throttle_browsertest.cc  ai_chat_browsertests.cc  ai_chat_conversation_task_browsertest.cc  ai_chat_metrics_browsertest.cc  ai_chat_policy_browsertest.cc  ai_chat_profiles_enabled_browsertest.cc  ai_chat_render_view_context_menu_browsertest.cc  ai_chat_service_factory.cc  ai_chat_settings_helper.cc  ai_chat_settings_helper.h  ai_chat_sidepanel_behavior_browsertest.cc  ai_chat_throttle_unittest.cc  ai_chat_ui_browsertest.cc  ai_chat_utils.cc  annotated_page_content_test_util.cc  brave_open_ai_chat_permission_context_unittest.cc  browser_tool_provider.cc  browser_tool_provider.h  browser_tool_provider_factory.cc  browser_tool_provider_factory.h  code_execution_tool.cc  code_execution_tool.h  code_execution_tool_browsertest.cc  content_agent_task_provider.h  content_agent_tool_provider.cc  content_agent_tool_provider.h  content_agent_tool_provider_browsertest.cc  content_agent_tool_provider_factory.cc  content_agent_tool_provider_factory.h  content_agent_tool_provider_unittest.cc  content_agent_tools_browsertest.cc  full_screenshotter_unittest.cc  page_content_blocks.cc  (+14 more)
browser/android/: BUILD.gn  DEPS  brave_init_android.cc  brave_shields_content_settings.cc  brave_sync_worker.cc  brave_tab_features.cc
browser/autocomplete/: BUILD.gn  brave_autocomplete_scheme_classifier.cc  chrome_autocomplete_provider_client_unittest.cc  sources.gni
browser/autoplay/: BUILD.gn  autoplay_browsertest.cc
browser/banners/: BUILD.gn  app_banner_manager_desktop_browsertest.cc
browser/brave_account/: BUILD.gn  brave_account_navigation_throttle.cc  brave_account_navigation_throttle_unittest.cc  brave_account_service_factory.cc
browser/brave_adaptive_captcha/: BUILD.gn  brave_adaptive_captcha_service_factory.cc
browser/brave_ads/: BUILD.gn  DEPS  ads_service_delegate.cc  ads_service_delegate.h  ads_service_factory.cc  ads_service_waiter.cc  ads_service_waiter.h  virtual_pref_provider_delegate.cc  virtual_pref_provider_delegate.h
browser/brave_news/: BUILD.gn  brave_news_controller_factory.cc  brave_news_controller_factory.h  brave_news_tab_helper.cc  brave_news_tab_helper.h  brave_news_tab_helper_browsertest.cc  direct_feed_fetcher_browsertest.cc  direct_feed_fetcher_delegate_impl.cc  direct_feed_fetcher_delegate_impl.h  sources.gni
browser/brave_origin/: BUILD.gn  brave_origin_service_factory.cc  brave_origin_service_factory.h  brave_origin_service_factory_unittest.cc
browser/brave_referrals/: referrals_service_delegate.cc  referrals_service_delegate.h  sources.gni
browser/brave_rewards/: BUILD.gn  DEPS  creator_detection_script_injector.cc  creator_detection_script_injector.h  extension_rewards_service_observer.cc  extension_rewards_service_observer.h  rewards_prefs_util.cc  rewards_service_factory.cc  rewards_service_factory.h  rewards_tab_helper.cc  rewards_tab_helper.h  rewards_util.cc  rewards_util.h
browser/brave_search/: BUILD.gn  backup_results_navigation_throttle.cc  backup_results_service_browsertest.cc  backup_results_service_factory.cc  backup_results_service_impl.cc  backup_results_service_impl.h  brave_search_browsertest.cc
browser/brave_shields/: BUILD.gn  DEPS  ad_block_custom_resources_browsertest.cc  ad_block_devtools_browsertest.cc  ad_block_only_mode_browsertest.cc  ad_block_pref_service_factory.cc  ad_block_service_browsertest.cc  ad_block_service_browsertest.h  ad_block_subscription_download_manager_getter.cc  ad_block_subscription_download_manager_getter.h  brave_farbling_service_factory.cc  (+18 more)
common/: BUILD.gn  DEPS  brave_channel_info.cc  brave_channel_info_posix.cc  brave_content_client.cc  brave_content_client_unittest.cc  resource_bundle_helper.cc  sources.gni
ios/: BUILD.gn
net/: BUILD.gn  sources.gni
renderer/: BUILD.gn  DEPS  brave_content_renderer_client.cc  brave_content_renderer_client.h  brave_render_frame_observer.cc  brave_render_thread_observer.cc  brave_render_thread_observer.h  sources.gni
utility/: BUILD.gn  DEPS  brave_content_utility_client.cc  sources.gni
(+7024 files in other folders)
