# Copyright (c) 2021 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# you can obtain one at http://mozilla.org/MPL/2.0/.

import("//unknown/components/ai_chat/core/common/buildflags/buildflags.gni")
import("//unknown/components/brave_vpn/common/buildflags/buildflags.gni")
import("//unknown/components/brave_wallet/common/buildflags/buildflags.gni")
import("//unknown/components/speedreader/common/buildflags/buildflags.gni")

group("storybook") {
  # Depend on any generated JS output that will
  # be imported by any JS code used in any Brave
  # storybook JS.
  # Explicitly defined here so that even when those targets
  # are disabled in a regular brave build due to build flags,
  # they will be generated before storybook is compiled.
  deps = [
    "//unknown/components/brave_new_tab_ui:mojom_js",
    "//unknown/components/brave_news/common:mojom_js",
    "//unknown/components/brave_rewards/core/mojom:mojom_js",
    "//unknown/components/brave_shields/core/common:mojom_js",
    "//unknown/components/brave_vpn/common/mojom:mojom_js",
    "//mojo/public/js:bindings",
    "//mojo/public/js:resources",
  ]

  if (enable_brave_wallet) {
    deps += [ "//unknown/components/brave_wallet/common:mojom_js" ]
  }

  if (enable_ai_chat) {
    deps += [ "//unknown/components/ai_chat/core/common/mojom:mojom_js" ]
  }

  if (enable_speedreader) {
    deps += [ "//unknown/components/speedreader/common:mojom_js" ]
  }
}
