# Copyright (c) 2022 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/. */

import("//unknown/components/brave_wallet/common/buildflags/buildflags.gni")

# Tests that do not run on Android
android_test_exception_sources = [
  "//unknown/browser/brave_content_browser_client_browsertest.cc",
  "//unknown/browser/brave_scheme_load_browsertest.cc",
  "//unknown/browser/brave_shields/brave_shields_web_contents_observer_browsertest.cc",
  "//unknown/browser/brave_shields/cookie_expiry_browsertest.cc",
  "//unknown/browser/brave_shields/domain_block_page_browsertest.cc",
  "//unknown/browser/brave_shields/eventsource_pool_limit_browsertest.cc",
  "//unknown/browser/brave_shields/websockets_pool_limit_browsertest.cc",
  "//unknown/browser/content_settings/brave_content_settings_browsertest.cc",
  "//unknown/browser/debounce/debounce_browsertest.cc",
  "//unknown/browser/extensions/brave_crx_generation_browsertest.cc",
  "//unknown/browser/extensions/brave_extension_provider_browsertest.cc",
  "//unknown/browser/extensions/extension_system_browsertest.cc",
  "//unknown/browser/perf/brave_perf_features_processor_browsertest.cc",
  "//unknown/browser/policy/brave_policy_browsertest.cc",
  "//unknown/browser/profiles/delete_profile_helper_browsertest.cc",
  "//unknown/browser/renderer_context_menu/brave_mock_render_view_context_menu.cc",
  "//unknown/browser/renderer_context_menu/brave_mock_render_view_context_menu.h",
  "//unknown/browser/renderer_context_menu/brave_spelling_menu_observer_browsertest.cc",
  "//unknown/browser/search_engines/search_engine_provider_service_browsertest.cc",
  "//unknown/browser/search_engines/search_engine_tracker_browsertest.cc",
  "//unknown/browser/themes/brave_theme_service_browsertest.cc",
  "//unknown/browser/translate/brave_translate_browsertest.cc",
  "//unknown/browser/ui/brave_browser_command_controller_browsertest.cc",
  "//unknown/browser/ui/content_settings/brave_autoplay_blocked_image_model_browsertest.cc",
  "//unknown/browser/ui/toolbar/brave_app_menu_model_browsertest.cc",
  "//unknown/browser/ui/webui/private_new_tab_page/brave_private_new_tab_page_browsertest.cc",
  "//unknown/browser/ui/webui/welcome_page/brave_welcome_ui_browsertest.cc",
  "//unknown/browser/web_package/signed_exchange_request_browsertest.cc",
  "//unknown/chromium_src/chrome/browser/safe_browsing/download_protection/check_client_download_request_base_browsertest.cc",
  "//unknown/chromium_src/chrome/browser/ui/hats/hats_service_browsertest.cc",
  "//unknown/chromium_src/chrome/browser/ui/views/location_bar/location_bar_view_browsertest.cc",
  "//unknown/chromium_src/chrome/browser/ui/views/tabs/tab_hover_card_bubble_view_browsertest.cc",
  "//unknown/components/brave_perf_predictor/browser/perf_predictor_tab_helper_browsertest.cc",
  "//unknown/components/content_settings/renderer/brave_content_settings_agent_impl_browsertest.cc",
  "//unknown/third_party/blink/renderer/modules/brave/navigator_browsertest.cc",
  "//chrome/browser/extensions/browsertest_util.cc",
  "//chrome/browser/extensions/browsertest_util.h",
  "//chrome/browser/extensions/extension_browsertest.cc",
  "//chrome/browser/extensions/extension_browsertest.h",
  "//chrome/browser/media/media_browsertest.cc",
  "//chrome/browser/media/media_browsertest.h",
  "//chrome/browser/ui/test/test_browser_dialog.cc",
  "//chrome/browser/ui/test/test_browser_dialog.h",
  "//chrome/browser/ui/test/test_browser_ui.cc",
  "//chrome/browser/ui/test/test_browser_ui.h",
]

if (enable_brave_wallet) {
  android_test_exception_sources += [
    "//unknown/browser/brave_wallet/brave_wallet_ethereum_chain_browsertest.cc",
    "//unknown/browser/brave_wallet/brave_wallet_event_emitter_browsertest.cc",
    "//unknown/browser/brave_wallet/brave_wallet_service_browsertest.cc",
    "//unknown/browser/brave_wallet/brave_wallet_sign_message_browsertest.cc",
    "//unknown/browser/brave_wallet/brave_wallet_tab_helper_browsertest.cc",
    "//unknown/browser/brave_wallet/cardano_provider_renderer_browsertest.cc",
    "//unknown/browser/brave_wallet/ethereum_provider_browsertest.cc",
    "//unknown/browser/brave_wallet/send_or_sign_transaction_browsertest.cc",
    "//unknown/browser/brave_wallet/solana_provider_browsertest.cc",
    "//unknown/browser/brave_wallet/solana_provider_renderer_browsertest.cc",
    "//unknown/browser/brave_wallet/wallet_watch_asset_browsertest.cc",
    "//unknown/browser/ui/webui/brave_wallet/wallet_panel_ui_browsertest.cc",
  ]
}

android_test_exception_deps = [
  "//unknown/browser/autoplay:browser_tests",
  "//unknown/browser/brave_ads:browser_tests",
  "//unknown/browser/brave_news:browser_tests",
  "//unknown/browser/brave_rewards/test:browser_tests",
  "//unknown/browser/browsing_data:browser_tests",
  "//unknown/browser/extensions",
  "//unknown/browser/extensions:test_support",
  "//unknown/browser/farbling:browser_tests",
  "//unknown/browser/net:browser_tests",
  "//unknown/browser/permissions:browser_tests",
  "//unknown/browser/psst:browser_tests",
  "//unknown/browser/test:browser_tests",
  "//unknown/browser/ui:browser_tests",
  "//unknown/browser/ui/tabs/test:browser_tests",
  "//unknown/browser/ui/views/tabs:browser_tests",
  "//unknown/components/de_amp/browser/test:browser_tests",
  "//unknown/renderer/skus:browser_tests",
  "//unknown/renderer/test:browser_tests",
  "//chrome/browser/web_applications",
  "//chrome/test:test_support_ui",
  "//extensions/browser:test_support",
  "//extensions/common:common_constants",
  "//extensions/common:test_support",
  "//ui/views",
]

if (enable_brave_wallet) {
  android_test_exception_deps += [
    "//unknown/browser/decentralized_dns/test:browser_tests",
    "//unknown/components/brave_wallet/resources:ethereum_provider_generated_resources",
  ]
}

# Tests that run only on Android
android_only_test_sources = [
  "//chrome/test/android/browsertests_apk/android_browsertests_jni_onload.cc",
  "//chrome/test/base/android/android_browser_test_browsertest_android.cc",
]

if (enable_brave_wallet) {
  android_only_test_sources += [ "//unknown/browser/brave_wallet/android/android_page_appearing_browsertest.cc" ]
}

android_only_test_deps = [
  ":test_support",
  "//android_webview/common",
  "//unknown/browser/partnercustomizations:delegate_public_impl_java",
  "//unknown/browser/password_manager/android:browser_tests",
  "//unknown/components/cosmetic_filters/browser",
  "//unknown/third_party/android_deps:com_android_installreferrer_java",
  "//chrome:chrome_android_core",
  "//chrome/android:delegate_public_impl_java",
  "//chrome/browser/flags:flags_android",
  "//chrome/browser/metrics:test_support",
  "//chrome/test:android_browsertests_assets",
  "//chrome/test:android_browsertests_java",
  "//chrome/test:test_support",
  "//chrome/test:test_support_ui_android",
  "//components/browser_ui/widget/android:java",
  "//components/gcm_driver/instance_id/android:instance_id_driver_test_support_java",

  # TODO(crbug.com/961849): This is needed for ShellManager which is what
  # the ChromeBrowserTestsActivity is using to build the java UI. It's
  # likely we want to replace it with something new that uses ChromeWindow
  # and CompositorViewHolder instead.
  "//content/shell:content_shell_lib",
  "//content/test:android_test_message_pump_support",
  "//testing/android/native_test:native_test_support",
]

if (enable_brave_wallet) {
  android_only_test_deps +=
      [ "//unknown/components/brave_wallet/browser:test_support" ]
}
